# python-db-ui-app

./: config.py  download_logs.py  pyproject.toml  sync_logs.py
db/: __init__.py  service.py  types.py
db/sql/: build_db.py  call_log.sql
sql/: rep_identity.sql
src/: psql_data.py
src/db/: queries.py  service.py
